@@ -704,6 +704,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -3096,6 +3106,49 @@ operator|.
 name|getNumFound
 argument_list|()
 decl_stmt|;
+for|for
+control|(
+name|SolrClient
+name|client
+range|:
+name|clients
+control|)
+block|{
+name|assertEquals
+argument_list|(
+literal|"unexpected pre-commitWithin document count on node: "
+operator|+
+operator|(
+operator|(
+name|HttpSolrClient
+operator|)
+name|client
+operator|)
+operator|.
+name|getBaseURL
+argument_list|()
+argument_list|,
+name|before
+argument_list|,
+name|client
+operator|.
+name|query
+argument_list|(
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|)
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|ModifiableSolrParams
 name|params
 init|=
@@ -3126,6 +3179,20 @@ literal|300
 argument_list|)
 argument_list|)
 expr_stmt|;
+specifier|final
+name|List
+argument_list|<
+name|SolrClient
+argument_list|>
+name|clientsToCheck
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|clients
+argument_list|)
+decl_stmt|;
 name|TimeOut
 name|timeout
 init|=
@@ -3139,9 +3206,46 @@ operator|.
 name|SECONDS
 argument_list|)
 decl_stmt|;
+do|do
+block|{
+specifier|final
+name|Iterator
+argument_list|<
+name|SolrClient
+argument_list|>
+name|it
+init|=
+name|clientsToCheck
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
 while|while
 condition|(
-name|cloudClient
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+specifier|final
+name|SolrClient
+name|sc
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|before
+operator|+
+literal|1
+operator|)
+operator|==
+name|sc
 operator|.
 name|query
 argument_list|(
@@ -3157,25 +3261,14 @@ argument_list|()
 operator|.
 name|getNumFound
 argument_list|()
-operator|!=
-name|before
-operator|+
-literal|1
 condition|)
 block|{
-if|if
-condition|(
-name|timeout
+name|it
 operator|.
-name|hasTimedOut
+name|remove
 argument_list|()
-condition|)
-block|{
-name|fail
-argument_list|(
-literal|"commitWithin did not work"
-argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|Thread
 operator|.
@@ -3185,51 +3278,33 @@ literal|100
 argument_list|)
 expr_stmt|;
 block|}
-for|for
-control|(
-name|SolrClient
-name|client
-range|:
-name|clients
-control|)
-block|{
-name|assertEquals
-argument_list|(
-literal|"commitWithin did not work on node: "
-operator|+
-operator|(
-operator|(
-name|HttpSolrClient
-operator|)
-name|client
-operator|)
+do|while
+condition|(
+operator|!
+name|clientsToCheck
 operator|.
-name|getBaseURL
+name|isEmpty
 argument_list|()
-argument_list|,
-name|before
-operator|+
-literal|1
-argument_list|,
-name|client
+operator|&&
+operator|!
+name|timeout
 operator|.
-name|query
-argument_list|(
-operator|new
-name|SolrQuery
-argument_list|(
-literal|"*:*"
-argument_list|)
-argument_list|)
-operator|.
-name|getResults
+name|hasTimedOut
 argument_list|()
+condition|)
+do|;
+name|assertTrue
+argument_list|(
+literal|"commitWithin did not work on some nodes: "
+operator|+
+name|clientsToCheck
+argument_list|,
+name|clientsToCheck
 operator|.
-name|getNumFound
+name|isEmpty
 argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
 comment|// TODO: This test currently fails because debug info is obtained only
 comment|// on shards with matches.
 comment|// query("q","matchesnothing","fl","*,score", "debugQuery", "true");
